made dynamic resize, crash and play sound on click

--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
-img {
-    height:100vh;
-    object-fit:fill;
+html {
+    margin:0;
+    padding:0;  
 }
+
+.fill {
+    cursor: grab;
+    height:100vh;
+    width:100vw;
+  }
+
